--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,17 +26,17 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: DevOps/package-lock.jso
+        cache-dependency-path: web/package-lock.json
     - name: ci
-      working-directory : ./DevOps
+      working-directory : ./web
       run: npm ci
     - name: build
       run: npm run build --if-present
-      working-directory: ./DevOps
+      working-directory: ./web
     - name: test
-      working-directory: ./DevOps
+      working-directory: ./web
       run: npm test
     - name: deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: DevOps/build
+        folder: web/build
