Update yml file

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: web
+        working-directory: ./web
 
     steps:
       - name: Checkout repository
