--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,10 +20,6 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    defaults:
-      run:
-        working-directory: ./web
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -47,4 +43,4 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: web/build
+          folder: build
